--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -201,11 +201,9 @@ button {
 @media only screen and (min-width: 768px) {
   .header .menu-link {
     padding: 0.5rem 0;
-    background: -webkit-linear-gradient(to right,var(--purple), var(--yellow)); 
-    background: linear-gradient(to right, var(--purple), var(--yellow)); 
-    -webkit-background-clip: text;
-    background-clip: text;
-    color: transparent;
+   color: #f1f3f5;
+   font-size: 20px;
+   text-decoration: none;
   }
 
 }
@@ -260,14 +258,171 @@ button {
  }
  .company-name {
 font-size: 30px;
-  background: var(--purple);
-  background: -webkit-linear-gradient(to right, var(--purple), var(--yellow)); 
-  background: linear-gradient(to right, var(--purple), var(--yellow)); 
-  -webkit-background-clip: text;
-  background-clip: text;
-  color: transparent;
+ color: #f7f5f5
 
  }
 
-/* css of home */
+/* css of ai section */
+/* AI section CSS  */
+@import url("https://fonts.googleapis.com/css?family=Open+Sans:400,400i,700");
+
+
+.aipic1 {
+    animation: motion-blur 8s ease-in-out infinite;
+  }
+  
+  @keyframes motion-blur {
+    10%
+    {
+      left: 0;
+      
+    }
+    20%
+    {
+      left: 0;
+      transform-origin: 0 0;
+      transform: scaleX(1);
+    }
+    40%
+    {
+     
+      transform: scaleX(1.05) skewX(-3deg);
+    }
+    80%
+    {
+      left: 250px;
+     
+      transform: scaleX(1) skewX(0deg);
+    }
+    90%
+    {
+      left: 250px;
+      transform-origin: 100% 0;
+      transform: scaleX(0.9);
+    }
+    95%
+    {
+    
+      transform: scaleX(1.05) skewX(3deg);
+    }
+  100%
+    {
+      left: 0px;
+      
+      transform: scaleX(1) skewX(0deg);
+    }
+  }
+@media only screen and (max-width: 768px) {
+    .aipic1 {
+        animation: motion-blur 8s ease-in-out infinite;
+      }
+      
+      @keyframes motion-blur {
+        10%
+        {
+          left: 0;
+          
+        }
+        20%
+        {
+          left: 0;
+          transform-origin: 0 0;
+          transform: scaleX(1);
+        }
+        40%
+        {
+         
+          transform: scaleX(1.05) skewX(-3deg);
+        }
+        80%
+        {
+          left: 250px;
+         
+          transform: scaleX(1) skewX(0deg);
+        }
+        90%
+        {
+          left: 250px;
+          transform-origin: 100% 0;
+          transform: scaleX(0.9);
+        }
+        95%
+        {
+        
+          transform: scaleX(1.05) skewX(3deg);
+        }
+      100%
+        {
+          left: 0px;
+          
+          transform: scaleX(1) skewX(0deg);
+        }
+      }
+    .aipic1{
+        width: 100%;
+        height: auto;
+        
+    }
+    .ai-div {
+        width: 100%;
+        height: auto;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+        background-color: #1C0732;
+    }
+  }
+.ai-div {
+    width: 100%;
+    height: auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+     background-color: #1C0732;
+}
+
+.radio_container {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    background-color: #440050;
+    width: 280px;
+    height: 50px;
+    margin-top: 20px;
+    border-radius: 9999px;
+    box-shadow: inset 0.5px 0.5px 2px 0 rgba(0, 0, 0, 0.15);
+ 
+}
+
+input[type="radio"] {
+    appearance: none;
+    /* display: none; */
+}
+
+label {
+    font-family: "Open Sans", sans-serif;
+    font-size: 20px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: inherit;
+    width: 220px;
+    height: 40px;
+    text-align: center;
+    border-radius: 9999px;
+    overflow: hidden;
+    transition: linear 0.3s;
+    color: #6e6e6edd;
+    cursor: pointer;
+}
+
+input[type="radio"]:checked + label {
+    background-color: #EFA620;
+    color: #f1f3f5;
+    font-weight: 900;
+    transition: 0.3s;
+}
+
 
