--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -426,3 +426,39 @@ input[type="radio"]:checked + label {
 }
 
 
+/* css of download section  */
+.dnd-div{
+  width: 100%;
+  height: 100%;
+  background-color: #000000;
+  text-align: center;
+  align-items: center;
+  color: #f1f3f5;padding: 100px;
+}
+#download-sec{
+  margin: 0%;
+  padding: 0%;
+  top: 0%;
+}
+.h1-dnd{
+  margin: 0 0 30px 0;
+  padding: 0%;
+
+}
+.p-dnd{
+  margin-bottom: 30px;
+  padding-bottom: 30px;
+}
+.dnd-button{
+  text-decoration: none;
+  padding: 15px;
+  font-size: 25px;
+  color: #000000;
+  background-color: #EFA620;
+  border-radius: 30px;
+  margin-top: 50px;
+  
+}
+.img-nd{
+  margin-top: 100px;
+}
