--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -116,10 +116,7 @@ button {
   width: 100%;
   height: 2px;
   margin: 6px auto;
-  background: var(--purple);
-  background: -webkit-linear-gradient(to right, var(--purple), var(--yellow));
-  background: linear-gradient(to right, var(--purple), var(--yellow)); 
-  color: transparent;
+color: #f7f5f5;
   
   transform: rotate(0deg);
   transition: all 0.3s ease-in-out;
