--- a/assets/css/footer.css
+++ b/assets/css/footer.css
@@ -9,6 +9,7 @@ ul {
 .footer-cta {
   border-bottom: 1px solid #373636;
 }
+
 .single-cta i {
   color: #ff5e14;
   font-size: 30px;
@@ -99,10 +100,10 @@ ul {
   background: #ff5e14;
 }
 .footer-widget ul li {
-  display: inline-block;
+  /* display: inline-block;
   float: left;
   width: 50%;
-  margin-bottom: 12px;
+  margin-bottom: 12px; */
 }
 .footer-widget ul li a:hover{
   color: #ff5e14;
@@ -137,7 +138,7 @@ ul {
 }
 .copyright-area{
   background: #202020;
-  padding: 25px 0;
+  
 }
 .copyright-text p {
   margin: 0;
@@ -169,5 +170,5 @@ ul {
 
 .fa-phone{
     color: #ff5e14 ;
-    font-size: 25px ;
+    font-size: 10px ;
 }
