--- a/assets/css/nav.css
+++ b/assets/css/nav.css
@@ -183,7 +183,7 @@ button {
   text-transform: uppercase;
   text-rendering: optimizeLegibility;
   transition: all 0.35s ease;
-  
+  margin-left: 30px;
   border: 2px;
 }
 .header .menu-link:hover {
