--- a/assets/css/footer.css
+++ b/assets/css/footer.css
@@ -172,3 +172,16 @@ ul {
     color: #EEA111 ;
     font-size: 10px ;
 }
+
+.facebook-bg{
+  font-size: 25px;
+  background: none;
+}
+.twitter-bg{
+  font-size: 25px;
+  background: none;
+}
+.google-bg{
+  font-size: 25px;
+  background: none;
+}
