--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,9 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
+
+@-ms-viewport{
+  width: device-width;
+}
 *{
   margin: 0%;
   padding: 0%;
