--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -17,11 +17,15 @@ h1, h2, h3, h4, h5, h6, p, a, .main-p
 }
 /* home page sec  */
 
-.download-icon{
-  margin-left: 20px;
- 
-  
-
+@media only screen and (max-width: 768px){
+  .div2686{
+    width: 100%;
+    height: auto;
+  }
+  .download-icon{
+    width: 50%;
+    height: auto;
+  }
 }
 .div2686{
   display: flex;
@@ -88,97 +92,6 @@ width: 50%;
 }
 
 
-.aipic1 {
-    animation: motion-blur 8s ease-in-out infinite;
-  }
-  
-  @keyframes motion-blur {
-    10%
-    {
-      left: 0;
-      
-    }
-    20%
-    {
-      left: 0;
-      transform-origin: 0 0;
-      transform: scaleX(1);
-    }
-    40%
-    {
-     
-      transform: scaleX(1.05) skewX(-3deg);
-    }
-    80%
-    {
-      left: 250px;
-     
-      transform: scaleX(1) skewX(0deg);
-    }
-    90%
-    {
-      left: 250px;
-      transform-origin: 100% 0;
-      transform: scaleX(0.9);
-    }
-    95%
-    {
-    
-      transform: scaleX(1.05) skewX(3deg);
-    }
-  100%
-    {
-      left: 0px;
-      
-      transform: scaleX(1) skewX(0deg);
-    }
-  }
-@media only screen and (max-width: 768px) {
-    .aipic1 {
-        animation: motion-blur 8s ease-in-out infinite;
-      }
-      
-      @keyframes motion-blur {
-        10%
-        {
-          left: 0;
-          
-        }
-        20%
-        {
-          left: 0;
-          transform-origin: 0 0;
-          transform: scaleX(1);
-        }
-        40%
-        {
-         
-          transform: scaleX(1.05) skewX(-3deg);
-        }
-        80%
-        {
-          left: 250px;
-         
-          transform: scaleX(1) skewX(0deg);
-        }
-        90%
-        {
-          left: 250px;
-          transform-origin: 100% 0;
-          transform: scaleX(0.9);
-        }
-        95%
-        {
-        
-          transform: scaleX(1.05) skewX(3deg);
-        }
-      100%
-        {
-          left: 0px;
-          
-          transform: scaleX(1) skewX(0deg);
-        }
-      }
     .aipic1{
         width: 100%;
         height: auto;
