--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,9 +1,9 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
 
-@-ms-viewport{
+/* @-ms-viewport{
   width: device-width;
-}
+} */
 *{
   margin: 0%;
   padding: 0%;
@@ -33,13 +33,36 @@ h1, h2, h3, h4, h5, h6, p, a, .main-p
 .section2 h1, p{
   color: black !important;
 }
+
+/* mobile responsive */
 @media only screen and (max-width: 768px){
+  .main-p{
+    color: black !important;
+    z-index: 99;
+  }
+  .wlcm{
+    font-size: 70px;
+    font-weight: 600;
+    line-height: 70px;
+    position: relative;
+    z-index: 99;
+  }
+  .div286 img{
+    width: 100%;
+    padding: 0% !important;
+    }
   .h1-dnd{
    width: auto;
   }
   .dnd-div{
-    width: 100vw;
-    height: auto;
+    
+    width: 100%;
+    height: 100%;
+    background-color: white;  
+    text-align: center;
+    align-items: center;
+    color: #f1f3f5;
+    padding: 30px !important;
   }
   .section2{
     width: 100vw !important;
@@ -75,18 +98,19 @@ h1, h2, h3, h4, h5, h6, p, a, .main-p
   justify-items: center;
   
 }
-.div414{
-  width: 100%;
+.div414 {
+  width: 100vw;
   height: auto;
   background-color: #070707;
-  align-items: center;
-  padding: 100px;
+  
+
+ 
 }
-.img1286{
-  width: 100%;
-  height: auto;
-  margin: 0% auto 0% auto;
+.div286 img{
+width: 100%;
+padding: 200px;
 }
+ 
 .div22{
   width: 100%;
   height: 100%;
@@ -254,7 +278,36 @@ input[type="radio"]:checked + label {
 
 }
 
+.d-btn {
+  padding: 15px;
+  background-color: blueviolet;
+  font-style: none;
+  color: aliceblue;
+  font-size: 25px;
+  border-radius: 30px;
+  text-decoration: none;
 
+}
+
+.hero-heading {
+  background: var(--purple);
+  background: -webkit-linear-gradient(to right, var(--purple), var(--yellow));
+  background: linear-gradient(to right, var(--purple), var(--yellow));
+  -webkit-background-clip: text;
+  background-clip: text;
+  color: transparent;
+}
+
+.scrolling-thumbs-container {
+  background-color: white !important;
+}
+
+.hero {
+
+  background-color: white !important;
+  color: black !important;
+
+}
 
 
 
