--- a/assets/css/footer.css
+++ b/assets/css/footer.css
@@ -1,164 +1,7 @@
-ul {
-    margin: 0px;
-    padding: 0px;
-}
-.footer-section {
-  background: #151414;
-  position: relative;
-}
-.footer-cta {
-  border-bottom: 1px solid #373636;
-}
-
-.single-cta i {
-  color: #EEA111;
-  font-size: 30px;
-  float: left;
-  margin-top: 8px;
-}
-.cta-text {
-  padding-left: 15px;
-  display: inline-block;
-}
-.cta-text h4 {
-  color: #fff;
-  font-size: 20px;
-  font-weight: 600;
-  margin-bottom: 2px;
-}
-.cta-text span {
-  color: #757575;
-  font-size: 15px;
-}
-.footer-content {
-  position: relative;
-  
-}
-
-
-
-
-.footer-social-icon a {
-  color: #fff;
-  font-size: 16px;
-  margin-right: 15px;
-}
-.footer-social-icon i {
-  height: 40px;
-  width: 40px;
-  text-align: center;
-  line-height: 38px;
-  border-radius: 50%;
-}
-.facebook-bg{
-  background: #3B5998;
-}
-.twitter-bg{
-  background: #55ACEE;
-}
-.google-bg{
-  background: #EEA111;
-}
-.footer-widget-heading h3 {
-  color: #fff;
-  font-size: 20px;
-  font-weight: 600;
-  margin-bottom: 40px;
-  position: relative;
-}
-.footer-widget-heading h3::before {
-  content: "";
-  position: absolute;
-  left: 0;
-  bottom: -15px;
-  height: 2px;
-  width: 50px;
-  background: #EEA111;
-}
-.footer-widget ul li {
-  /* display: inline-block;
-  float: left;
-  width: 50%;
-  margin-bottom: 12px; */
-}
-.footer-widget ul li a:hover{
-  color: #EEA111;
-}
-.footer-widget ul li a {
-  color: #878787;
-  text-transform: capitalize;
-}
-.subscribe-form {
-  position: relative;
-  overflow: hidden;
-}
-.subscribe-form input {
+.footer-div{
   width: 100%;
-  padding: 14px 28px;
-  background: #2E2E2E;
-  border: 1px solid #2E2E2E;
-  color: #fff;
+  height: 250px;
+  background-color: black;
+  text-align: center;
+  color: white;
 }
-.subscribe-form button {
-    position: absolute;
-    right: 0;
-    background: #EEA111;
-    padding: 20px 20px;
-    border: 1px solid #EEA111;
-    top: 0;
-}
-.subscribe-form button i {
-  color: #fff;
-  font-size: 22px;
-  transform: rotate(-6deg);
-}
-.copyright-area{
-  background: #202020;
-  
-}
-.copyright-text p {
-  margin: 0;
-  font-size: 14px;
-  color: #878787;
-}
-.copyright-text p a{
-  color: #EEA111;
-}
-.footer-menu li {
-  display: inline-block;
-  margin-left: 20px;
-}
-.footer-menu li:hover a{
-  color: #EEA111;
-}
-.footer-menu li a {
-  font-size: 14px;
-  color: #878787;
-}
-.fa-envelope-open{
-    color: #EEA111;
-    font-size: 25px;
-}
-.fa-map-marker-alt{
-    color: #EEA111 !important;
-    font-size: 25px !important;
-}
-
-.fa-phone{
-    color: #EEA111 ;
-    font-size: 10px ;
-}
-
-.facebook-bg{
-  font-size: 25px;
-  background: none;
-}
-.twitter-bg{
-  font-size: 25px;
-  background: none;
-}
-.google-bg{
-  font-size: 25px;
-  background: none;
-}
-
