--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -102,13 +102,30 @@ h1, h2, h3, h4, h5, h6, p, a, .main-p
   width: 100vw;
   height: auto;
   background-color: #070707;
+  display: flex;
   
 
  
 }
+.ddiv76 {
+  margin: auto 0 auto 0;
+  color: white;
+}
+.p645{
+  color: white !important;
+  text-align: center;
+  margin: 50px;
+}
+.h747{
+  color: white !important;
+  text-align: center;
+  margin: 50px;
+}
 .div286 img{
-width: 100%;
-padding: 200px;
+width: 90%;
+padding: 50px;
+padding-left: 50px;
+
 }
  
 .div22{
