--- a/assets/css/footer.css
+++ b/assets/css/footer.css
@@ -1,7 +1,81 @@
-.footer-div{
-  width: 100%;
-  height: 250px;
-  background-color: black;
-  text-align: center;
-  color: white;
+ 
+.container-footer {
+ width: 100%;
+height: auto;
+padding: 50px 20px 50px 20px;
+background-color: black;
+
 }
+.copy-right{
+    text-align: center;
+    color: white;
+}
+.p-copy-right{
+    color: white !important;
+}
+.copyright{
+    text-align: center;
+    background-color: black;
+    color: white ;
+}
+.social-m-icon{
+    margin-top: 40px;
+    align-items: right
+    ;
+     
+}
+.copyright-des{
+    color: white;
+    padding-top: 50px;
+}
+.fa-solid{
+    padding: 10px;
+    color: yellow;
+    
+}
+.ftr-menu li{
+    list-style: none;
+    color: white;
+}
+ .social-icon{
+    align-items: center;
+     background-color: yellow;
+     margin: 10px;
+     text-align: center;
+     padding: 6px;
+     border-radius: 10%;
+     
+ }
+ .fa-brands{
+     color: black;
+     
+ }
+ 
+.footer-logo{
+    width: 150px;
+}
+.footer-row {
+display: grid;
+grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+grid-gap: 20px;
+ 
+}
+.footer-des{
+    color: white !important;
+}
+.div-footer {
+text-align: left;
+ 
+  
+ 
+ 
+
+}
+
+ 
+ 
+
+ 
+ 
+
+ 
