--- a/assets/css/nav.css
+++ b/assets/css/nav.css
@@ -218,8 +218,13 @@ button {
 .header-scroll.scrolled {
   background-color: #fffffff3;
   transition: background-color 200ms linear;
-  color: #f7f5f5;
+ 
   
+}
+.logo.scrolled{
+  width: 50px;
+  transition: 0.05s;
+  margin-left: 20px;
 }
 
 @media screen and (max-width: 768px){
@@ -238,7 +243,7 @@ button {
 
 .logo{
   width: 100px;
-  height: 70px;
+  
   margin-left: 20px;
  }
 
