--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -2,6 +2,345 @@
  html {
   scroll-behavior: smooth !important;
 }
+
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@900&display=swap');
+@-ms-viewport{
+  width: device-width;
+}
+*{
+  margin: 0%;
+  padding: 0%;
+
+}
+body{
+  background-color: transparent !important;
+}
+body,
+h1, h2, h3, h4, h5, h6, p, a, .main-p
+{
+   color: #333333 !important;
+  font-family: 'Poppins', sans-serif !important;
+}
+/* home page sec  */
+.div44{
+  margin: 10px;
+  align-items: left;
+  
+}
+.div2686{
+  display: flex;
+ justify-content: center;
+ align-items: left;
+}
+ 
+ 
+
+ 
+ 
+.felomee-tagline{
+  font-size: 60px;
+  text-transform: lowercase  ;
+  line-height: 65px;
+  font-family: 'Poppins', sans-serif ;  
+  font-weight: 1000;    
+  z-index: 99; 
+
+   
+}
+
+/* mobile responsive */
+@media only screen and (max-width: 768px){
+  .main-p{
+    color: black !important;
+    z-index: 99;
+  }
+  
+  .div286 img{
+    width: 100%;
+    padding: 0% !important;
+    }
+  
+  .dnd-div{
+    
+    width: 100%;
+    height: 100%;
+    background-color: white;  
+    text-align: center;
+    align-items: center;
+    color: #f1f3f5;
+    padding: 30px !important;
+  }
+  .section2{
+    width: 100vw !important;
+  min-height: 1000px !important;
+  }
+ 
+ 
+ 
+ 
+
+}
+
+.div414 {
+  width: 100%;
+  height: auto;
+  background-color: white;
+  display: flex;
+  
+
+ 
+}
+.mob1{
+  width: 90%;
+  margin-bottom: 30px;
+}
+.img286{
+  width: 90% !important;
+}
+.ddiv76 {
+  margin: auto 0 auto 0;
+   justify-content: center;
+  align-items: center;
+ }
+.p645{
+  color: white !important;
+  text-align: center;
+  margin: 50px;
+}
+.h747{
+   font-size: 3rem;
+  text-align: center;
+  line-height: 3.5rem;
+  font-weight: 700;
+   
+}
+.h5878{
+   color: #EFA620 !important;
+  font-size: 2rem;
+  text-align: center;
+  font-weight: 700;
+}
+.div286 img{
+width: 65%;
+padding: 50px;
+padding-left: 100px;
+
+}
+ 
+.div22{
+  width: 100%;
+  height: 100%;
+  background-color: #1C0732;
+  display: flex;
+
+}
+.p54865{
+  font-size: 1.2rem;
+  font-weight: 600;
+  color: #EFA620 !important;
+}
+.p6476{
+  font-size: 1.2rem;
+  font-weight: 600;
+  font-style: italic;
+}
+.Voila{
+  font-weight: 600;
+  color: #ce0000 !important;
+}
+.main-headlines{
+  font-size: 4rem;
+  margin: 0%;
+  margin-bottom: 10px;
+  color: #333333 !important;
+  
+}
+.imgg236{
+transform: rotate(270deg);
+-ms-transform: rotate(270deg);
+-moz-transform: rotate(270deg);
+-webkit-transform: rotate(270deg);
+-o-transform: rotate(270deg);
+width: 50%;
+}
+.div24{
+  color: #f1f3f5;
+  padding: 50px;
+
+}
+.p234{
+  margin-bottom: 50px;
+}
+.h42{
+  margin-bottom: 50px;
+}
+.a24{
+  text-decoration: none;
+  padding: 15px;
+  color: #000000;
+  background-color: #EFA620;
+  margin-top: 100px;
+  border-radius: 30px;
+  font-size: 25px;
+}
+
+/* css of ai section */
+/* AI section CSS  */
+ .felomee-name{
+  color: #EFA620;
+  
+   
+    
+}
+ 
+
+
+    .aipic1{
+        width: 100%;
+        height: auto;
+        
+    }
+    .ai-div {
+        width: 100%;
+        height: auto;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+        background-color: #1C0732;
+    }
+  }
+.ai-div {
+    width: 100%;
+    height: auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+     background-color: #1C0732;
+}
+
+.radio_container {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    background-color: #440050;
+    width: 280px;
+    height: 50px;
+    margin-top: 20px;
+    border-radius: 9999px;
+    box-shadow: inset 0.5px 0.5px 2px 0 rgba(0, 0, 0, 0.15);
+ 
+}
+
+input[type="radio"] {
+    appearance: none;
+    /* display: none; */
+}
+
+label {
+    font-family: "Open Sans", sans-serif;
+    font-size: 20px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: inherit;
+    width: 220px;
+    height: 40px;
+    text-align: center;
+    border-radius: 9999px;
+    overflow: hidden;
+    transition: linear 0.3s;
+    color: #6e6e6edd;
+    cursor: pointer;
+}
+
+input[type="radio"]:checked + label {
+    background-color: #EFA620;
+    color: #f1f3f5;
+    font-weight: 900;
+    transition: 0.3s;
+}
+
+
+/* css of download section  */
+.dnd-div{
+  width: 100%;
+  height: 100%;
+  background-color: white;
+  text-align: center;
+  align-items: center;
+  color: #f1f3f5;padding: 100px;
+}
+.dnd-div h1, p{
+  color: black;
+}
+#download-sec{
+  margin: 0%;
+  padding: 0%;
+  top: 0%;
+}
+.h1-dnd{
+  margin: 0 0 30px 0;
+  padding: 0%;
+  font-size: 3rem;
+  font-weight: 900;
+
+}
+.p-dnd{
+  margin-bottom: 30px;
+  padding-bottom: 30px;
+  font-size: 1.5rem;
+  color: #EFA620 !important;
+}
+.dnd-button{
+  text-decoration: none;
+  padding: 15px;
+  font-size: 25px;
+  color: #000000;
+  background-color: #EFA620;
+  border-radius: 30px;
+  margin-top: 50px;
+  
+}
+.img-nd{
+  margin-top: 100px;
+}
+
+ 
+.d-btn {
+    padding: 15px;
+    background-color: blueviolet;
+    font-style: none;
+    color: aliceblue;
+    font-size: 25px;
+    border-radius: 30px;
+    text-decoration: none;
+
+}
+
+.d-btn {
+  padding: 15px;
+  background-color: blueviolet;
+  font-style: none;
+  color: aliceblue;
+  font-size: 25px;
+  border-radius: 30px;
+  text-decoration: none;
+
+}
+
+ 
+
+.scrolling-thumbs-container {
+  background-color: white !important;
+}
+ 
+
+
+
+
+ 
 /* ==========================================================================
    Start of base Webflow CSS - If you're looking for some ultra-clean CSS, skip the boilerplate and see the unminified code below.
    ========================================================================== */
@@ -10,94 +349,14 @@
    /* ==========================================================================
       Start of custom Webflow CSS
       ========================================================================== */
-   h1 {
-     margin-top: 20px;
-     margin-bottom: 10px;
-     font-family: 'Work Sans', sans-serif;
-     font-size: 38px;
-     line-height: 44px;
-     font-weight: 700;
-   }
-   
-   h2 {
-     margin-top: 20px;
-     margin-bottom: 10px;
-     font-size: 32px;
-     line-height: 36px;
-     font-weight: bold;
-   }
-   
-   h3 {
-     margin-top: 20px;
-     margin-bottom: 10px;
-     font-size: 24px;
-     line-height: 30px;
-     font-weight: bold;
-   }
-   
-   h4 {
-     margin-top: 10px;
-     margin-bottom: 10px;
-     font-size: 18px;
-     line-height: 24px;
-     font-weight: bold;
-   }
-   
-   h5 {
-     margin-top: 10px;
-     margin-bottom: 10px;
-     font-size: 14px;
-     line-height: 20px;
-     font-weight: bold;
-   }
-   
-   h6 {
-     margin-top: 10px;
-     margin-bottom: 10px;
-     font-size: 12px;
-     line-height: 18px;
-     font-weight: bold;
-   }
-   
-   p {
-     margin-bottom: 10px;
-   }
-   
-   a {
-     text-decoration: underline;
-   }
-   
-   ul {
-     margin-top: 0px;
-     margin-bottom: 10px;
-     padding-left: 40px;
-   }
-   
-   li {
-     font-family: 'Work Sans', sans-serif;
-     color: #777;
-     font-size: 16px;
-     line-height: 24px;
-   }
-   
-   strong {
-     font-weight: 700;
-   }
-   
-   blockquote {
-     margin-bottom: 10px;
-     padding: 10px 20px;
-     border-left: 5px solid #e2e2e2;
-     font-size: 18px;
-     line-height: 22px;
-   }
+ 
    
    .hero {
      position: relative;
      overflow: hidden;
      width: 100%;
      height: 60vw;
-     border: 1px none #000;
+     
    }
    
    .section2 {
@@ -146,14 +405,14 @@
    
    .text-wrap {
   
-     align-items: center !important;
+     align-items: left;
      position: absolute;
-     left: 12.6vw;
+     left: 12vw;
      display: -webkit-box;
      display: -webkit-flex;
      display: -ms-flexbox;
      display: flex;
-     width: 31vw;
+     width: 40vw;
      height: 50vw;
      -webkit-box-orient: vertical;
      -webkit-box-direction: normal;
@@ -167,24 +426,9 @@
      -webkit-box-align: start;
      -webkit-align-items: flex-start;
      -ms-flex-align: start;
-     align-items: flex-start;
-   }
+    }
    
-   .hero-heading {
-     position: relative;
-     margin-top: 0.5vw;
-     margin-bottom: 2vw;
-     -webkit-box-flex: 0;
-     -webkit-flex: 0 auto;
-     -ms-flex: 0 auto;
-     flex: 0 auto;
-     border: 1px none #000;
-     font-family: 'Work Sans', sans-serif;
-     color: #fff;
-     font-size: 6.1vw;
-     line-height: 6vw;
-     font-weight: 800;
-   }
+  
    
    .text-wrap-2 {
      position: relative;
@@ -261,17 +505,7 @@
      overflow: hidden;
    }
    
-   .main-headlines {
-     position: relative;
-     margin-top: 0px;
-     margin-bottom: 1.5vw;
-     border: 1px none #000;
-     font-family: 'Work Sans', sans-serif;
-     color: #fff;
-     font-size: 3vw;
-     line-height: 3.5vw;
-     font-weight: 800;
-   }
+ 
    
    .main-headlines.center {
      margin-bottom: 1vw;
@@ -348,15 +582,19 @@
    .wlcm{
      text-align: left;
    }
-   
+   .GAMIFIED{
+     font-weight: 600;
+   }
    .main-p {
-     margin-bottom: 2vw;
-     font-family: 'Work Sans', sans-serif;
-     color: #fff;
-     font-size: 1.15vw;
-     line-height: 1.7vw;
+     margin-bottom: 1.4vw;
+     font-size: 1rem; 
+     line-height: 1.8vw;
      font-weight: 400;
      text-align: left;
+   }
+   .ed-tage{
+     color: #EFA620;
+     font-weight: 800;
    }
    
    .main-p.center {
@@ -2089,12 +2327,7 @@
      .main {
        overflow: hidden;
      }
-   
-     .main-headlines {
-       font-size: 3.4vw;
-       line-height: 3.8vw;
-     }
-   
+  
      .lottie-phone {
        display: none;
      }
@@ -2365,10 +2598,7 @@
        object-fit: scale-down;
      }
    
-     .main-headlines {
-       font-size: 5vw;
-       line-height: 7vw;
-     }
+    
    
      .lottie-phone {
        display: none;
