--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -22,15 +22,32 @@ h1, h2, h3, h4, h5, h6, p, a, .main-p
   font-family: 'Poppins', sans-serif !important;
 }
 /* home page sec  */
+.ai-sec{}
+ .ai-sec{
+   width: 100vw;
+   height: 100vh;
+ 
+   background-image:
+url("/ai.structure.svg");
+   background-position: center;
+   background-repeat: no-repeat;
+   background-attachment: fixed;
+   background-size:cover;
+    
+ }
 .div44{
   margin: 10px;
   align-items: left;
   
 }
+.div4{
+  display: flex;
+}
 .div2686{
   display: flex;
  justify-content: center;
- align-items: left;
+ 
+
 }
  
  
@@ -38,7 +55,7 @@ h1, h2, h3, h4, h5, h6, p, a, .main-p
  
  
 .felomee-tagline{
-  font-size: 60px;
+  font-size: 50px;
   text-transform: lowercase  ;
   line-height: 65px;
   font-family: 'Poppins', sans-serif ;  
@@ -47,7 +64,21 @@ h1, h2, h3, h4, h5, h6, p, a, .main-p
 
    
 }
-
+.img1286{
+  width: 65%;
+}
+.img126{
+  width: 100%;
+  margin-left: 100px;
+  justify-content: center;
+  align-items: center;
+}
+.ddiv74{
+  align-items: center;
+  justify-content: center;
+  padding: 100px;
+  width: 60vw;
+}
 /* mobile responsive */
 @media only screen and (max-width: 768px){
   .main-p{
@@ -55,10 +86,7 @@ h1, h2, h3, h4, h5, h6, p, a, .main-p
     z-index: 99;
   }
   
-  .div286 img{
-    width: 100%;
-    padding: 0% !important;
-    }
+   
   
   .dnd-div{
     
@@ -82,9 +110,9 @@ h1, h2, h3, h4, h5, h6, p, a, .main-p
 }
 
 .div414 {
-  width: 100%;
-  height: auto;
-  background-color: white;
+  width: 100vw;
+  height: 100vh;
+   
   display: flex;
   
 
@@ -94,38 +122,28 @@ h1, h2, h3, h4, h5, h6, p, a, .main-p
   width: 90%;
   margin-bottom: 30px;
 }
+.img86{
+  width: 80%;
+  margin-left: 50px;
+}
 .img286{
   width: 90% !important;
 }
 .ddiv76 {
   margin: auto 0 auto 0;
    justify-content: center;
-  align-items: center;
+  align-items: left;
+  width: 60vw;
+  padding: 50px;
  }
 .p645{
   color: white !important;
   text-align: center;
   margin: 50px;
 }
-.h747{
-   font-size: 3rem;
-  text-align: center;
-  line-height: 3.5rem;
-  font-weight: 700;
-   
-}
-.h5878{
-   color: #EFA620 !important;
-  font-size: 2rem;
-  text-align: center;
-  font-weight: 700;
-}
-.div286 img{
-width: 65%;
-padding: 50px;
-padding-left: 100px;
+ 
 
-}
+ 
  
 .div22{
   width: 100%;
@@ -140,19 +158,20 @@ padding-left: 100px;
   color: #EFA620 !important;
 }
 .p6476{
-  font-size: 1.2rem;
-  font-weight: 600;
+    margin: 0;
+   padding: 0;
   font-style: italic;
+  line-height: 3rem;
 }
 .Voila{
   font-weight: 600;
   color: #ce0000 !important;
 }
 .main-headlines{
-  font-size: 4rem;
+  font-size: 3rem;
   margin: 0%;
   margin-bottom: 10px;
-  color: #333333 !important;
+   font-style: italic;
   
 }
 .imgg236{
@@ -281,7 +300,7 @@ input[type="radio"]:checked + label {
   top: 0%;
 }
 .h1-dnd{
-  margin: 0 0 30px 0;
+   margin-bottom: 100px;
   padding: 0%;
   font-size: 3rem;
   font-weight: 900;
@@ -331,10 +350,6 @@ input[type="radio"]:checked + label {
 }
 
  
-
-.scrolling-thumbs-container {
-  background-color: white !important;
-}
  
 
 
@@ -1233,14 +1248,16 @@ input[type="radio"]:checked + label {
      border-color: #d0d0d0;
      border-radius: 100vw;
    }
-   
+   .lottie21{
+     width: 45%;
+   }
    .scrolling-thumbs-container {
      position: relative;
      z-index: -1;
      overflow: hidden;
      width: 100%;
      height: 30vw;
-     background-color: #373f49;
+     background-color: white;
    }
    
    .column1 {
