--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -28,7 +28,7 @@ h1, h2, h3, h4, h5, h6, p, a, .main-p
    height: 100vh;
  
    background-image:
-url("/ai.structure.svg");
+url("ai.structure.svg");
    background-position: center;
    background-repeat: no-repeat;
    background-attachment: fixed;
